# internal/module/assistant_suggestions/infrastructure/driving/rest/handler.go
@@ -2,8 +2,8 @@ package rest
 
 import (
 	"assistant_suggestions/application/command"
-	"assistant_suggestions/application/services"
 	_ "assistant_suggestions/application/dto"
+	"assistant_suggestions/application/services"
 	"common"
 	"encoding/json"
 	"fmt"
